chore(book): updates on current challenges

--- a/ibm_3270.md
+++ b/ibm_3270.md
@@ -9,7 +9,7 @@
 ### Running
 
 ```sh
-docker run -it --rm
+docker run -it --rm \
   $(echo "$DOCKER_RUN_OPTS") \
   --name ibm-3270 \
   docker.io/brunowego/ibm-3270:latest \
