chore(books): a week of hard work

--- a/a11y.md
+++ b/a11y.md
@@ -7,3 +7,9 @@
 ## Tools
 
 - [Contrast Ratio](https://contrast-ratio.com/)
+
+##
+
+- [WAVE Web Accessibility Evaluation Tool](https://wave.webaim.org/)
+- [](https://www.powermapper.com/products/sortsite/checks/accessibility-checks/)
+- [](https://achecker.ca/checker/index.php)
