chore(books): middle week changes

--- a/ibm_3270.md
+++ b/ibm_3270.md
@@ -11,7 +11,7 @@
 ```sh
 docker run -it --rm \
   $(echo "$DOCKER_RUN_OPTS") \
-  --add-host [hostname]:[ip] \
+  # --add-host [hostname]:[ip] \
   --name ibm-3270 \
   docker.io/brunowego/ibm-3270:latest \
     -secure \
