chore(books): focus on load testing

--- a/k6.md
+++ b/k6.md
@@ -5,6 +5,7 @@
 ## Guides
 
 - [Installation](https://k6.io/docs/getting-started/installation/)
+- [Running large tests](https://k6.io/docs/testing-guides/running-large-tests/)
 
 ## Links
 
@@ -179,3 +180,35 @@ https://github.com/arunk2493/k6performancetesting/blob/main/grafana_dashboard.js
 - JSON
 - Load Impact Cloud Platform
 - StatsD
+
+### Issues
+
+#### Socket Too Many Open Files
+
+```log
+WARN[0001] Request Failed error="Post \"http://localhost:8080/api/v1/widget\": dial tcp 127.0.0.1:8080: socket: too many open files"
+```
+
+```sh
+ulimit -n 8192
+```
+
+#### Not Found
+
+```log
+WARN[0001] Request Failed error="Post \"http://localhost:8080/api/v1/widget\": dial tcp 127.0.0.1:8080: connect: connection reset by peer"
+```
+
+Probably a "Not Found" response.
+
+<!-- ####
+
+```log
+WARN[0001] Request Failed error="Post \"http://localhost:8080/api/v1/widget\": write tcp 127.0.0.1:52257->127.0.0.1:8080: write: broken pipe"
+``` -->
+
+<!-- ####
+
+```log
+WARN[0001] Request Failed error="Post \"http://localhost:8080/api/v1/widget\": read tcp 127.0.0.1:52259->127.0.0.1:8080: read: connection reset by peer"
+``` -->
