chore(books): the last 70 changes

--- a/k6.md
+++ b/k6.md
@@ -108,6 +108,16 @@ K6_VERSION="$(curl -ks https://api.github.com/repos/k6io/k6/releases/latest | gr
       sudo chmod +x '/usr/local/bin/k6'
 ```
 
+#### YUM
+
+```sh
+sudo wget 'https://bintray.com/loadimpact/rpm/rpm' \
+  -O '/etc/yum.repos.d/bintray-loadimpact-rpm.repo'
+
+yum check-update
+sudo yum -y install k6
+```
+
 #### Chocolatey
 
 ```sh
