chore(books): week learn evolutions

--- a/k6.md
+++ b/k6.md
@@ -12,6 +12,10 @@ https://k6.io/blog/running-distributed-tests-on-k8s/
 
 **Keywords:** Benchmark
 
+## Alternatives
+
+- [Locust](/locust.md)
+
 ## Guides
 
 - [Installation](https://k6.io/docs/getting-started/installation/)
