chore(books): last 67 changes

--- a/android/emulator/x86_64.md
+++ b/android/emulator/x86_64.md
@@ -7,18 +7,18 @@
 ## Install Packages
 
 ```sh
-# Installed packages
-sdkmanager --list | awk '/Installed/{flag=1; next} /Available/{flag=0} flag'
-
 # List packages
 sdkmanager --list
 
+# Installed packages
+sdkmanager --list | awk '/Installed/{flag=1; next} /Available/{flag=0} flag'
+
 # Install packages
-sdkmanager \
-  'build-tools;25.0.0' \
-  'system-images;android-25;google_apis;x86_64' \
-  'platforms;android-25'
+sdkmanager 'system-images;android-25;google_apis;x86_64'
 ```
+
+<!-- 'build-tools;25.0.0' \
+'platforms;android-25' -->
 
 **Note:** Change `google_apis` to `google_apis_playstore` for production builds.
 
