docs(books): last 69 changes

--- a/i18n.md
+++ b/i18n.md
@@ -1,5 +1,20 @@
 # Internationalization (i18n)
 
+<!--
+https://github.com/WeblateOrg/weblate
+https://github.com/formatjs/formatjs
+
+https://github.com/lokalise/i18n-ally
+-->
+
+## Tools
+
+- [Crowdin](https://crowdin.com)
+- [inlang](/inlang.md)
+- [Lokalise](https://lokalise.com)
+- [POEditor](https://poeditor.com)
+- [Transifex](https://transifex.com)
+
 ## Tips
 
 ### Visual Studio Code
