docs(books): last 17 changes

--- a/i18n.md
+++ b/i18n.md
@@ -11,9 +11,17 @@ https://github.com/lokalise/i18n-ally
 
 - [Crowdin](https://crowdin.com)
 - [inlang](/inlang.md)
+- [Localazy](https://localazy.com)
 - [Lokalise](https://lokalise.com)
 - [POEditor](https://poeditor.com)
 - [Transifex](https://transifex.com)
+- [Weblate](/weblate/README.md) 🌟
+
+## Formats
+
+- GNU gettext (PO) 🌟
+- Program Language (eq. JavaScript/TypeScript)
+- Data Container (eq. JSON, YAML, etc)
 
 ## Tips
 
