docs(books): last 27 changes

--- a/i18n.md
+++ b/i18n.md
@@ -9,12 +9,17 @@ https://github.com/lokalise/i18n-ally
 
 ## Tools
 
+### Enterprise
+
 - [Crowdin](https://crowdin.com)
 - [inlang](/inlang.md)
 - [Localazy](https://localazy.com)
 - [Lokalise](https://lokalise.com)
 - [POEditor](https://poeditor.com)
 - [Transifex](https://transifex.com)
+
+### Open Source
+
 - [Weblate](/weblate/README.md) 🌟
 
 ## Formats
