docs(books): last 33 changes

--- a/aws/services/s3.md
+++ b/aws/services/s3.md
@@ -74,13 +74,23 @@ aws s3api get-bucket-website \
 
 #
 aws s3 cp \
+  --acl 'public-read' \
+  ./<filename> \
+  s3://xyz.tld
+
+aws s3 cp \
   --recursive \
-  ./favicon.png \
-  s3://xyz.tld/
+  --acl 'public-read' \
+  ./<folder> \
+  s3://xyz.tld
 
 #
 aws s3 rm s3://xyz.tld/favicon.png
 ```
+
+<!--
+https://<bucket-name>.s3.amazonaws.com/<object-key>
+-->
 
 <!--
 aws s3 sync s3://ORIGIN-BUCKET-NAME s3://DESTINATION-BUCKET-NAME/OPTIONAL-FOLDER \
