docs(books): last 54 changes

--- a/i18n.md
+++ b/i18n.md
@@ -9,7 +9,7 @@ https://github.com/lokalise/i18n-ally
 
 ## Tools
 
-### Enterprise
+### Managed
 
 - [Crowdin](https://crowdin.com)
 - [inlang](/inlang.md)
