docs(books): last 28 changes

--- a/i18n.md
+++ b/i18n.md
@@ -7,6 +7,12 @@ https://github.com/formatjs/formatjs
 https://github.com/lokalise/i18n-ally
 -->
 
+<!--
+chrome://settings/?search=languages
+
+about:preferences#general > Language
+-->
+
 ## Tools
 
 ### Managed
