docs(books): last 47 changes

--- a/i18n.md
+++ b/i18n.md
@@ -3,7 +3,6 @@
 <!--
 https://github.com/WeblateOrg/weblate
 https://github.com/formatjs/formatjs
-
 https://github.com/lokalise/i18n-ally
 -->
 
@@ -15,6 +14,20 @@ about:preferences#general > Language
 
 ## Tools
 
+- [PO File Translation Tool for ChatGPT (gpt-po)](/gpt-po.md)
+
+<!--
+https://ai-json-translator.vercel.app
+
+https://github.com/fkirc/attranslate
+https://github.com/dguisadom/GPTranslator
+https://github.com/sonderbase/gpt-translator
+https://github.com/lobehub/lobe-cli-toolbox/tree/master/packages/lobe-i18n
+https://github.com/ObservedObserver/chatgpt-i18n
+-->
+
+## Management
+
 ### Managed
 
 - [Crowdin](https://crowdin.com)
@@ -25,8 +38,9 @@ about:preferences#general > Language
 - [Transifex](https://transifex.com)
 
 <!--
+https://simplelocalize.io
 https://translation.io
-https://github.com/translation/
+https://github.com/translation
 -->
 
 ### Open Source
