--- a/next.js/extend/i18n.md
+++ b/next.js/extend/i18n.md
@@ -1,7 +1,31 @@
 # Internationalization (i18n)
 
-TODO
+## Links
+
+- Docs
+  - [Internationalization](https://nextjs.org/docs/app/building-your-application/routing/internationalization)
 
 <!--
-https://github.com/i18next/next-language-detector/tree/main/examples/basic
+https://github.com/lingui/js-lingui
+https://github.com/amannn/next-intl
+https://github.com/i18next/next-i18next
+https://github.com/aralroca/next-translate
+https://github.com/QuiiBz/next-international
+https://github.com/Avansai/next-multilingual
+https://github.com/i18nexus/next-i18n-router
+-->
+
+<!--
+https://github.com/dmythro/dmythro.com/blob/main/apps/www/src/middleware.ts
+
+https://github.com/websitesieutoc/cake-editor/blob/master/apps/dashboard/middleware.ts
+https://github.com/microrealestate/microrealestate/blob/master/webapps/tenant/src/middleware.ts
+https://github.com/mossland/mossverse/blob/main/apps/mossland/middleware.ts
+https://github.com/mythal/boluo/blob/master/apps/site/src/middleware.ts
+https://github.com/milanterhes/naturechill/blob/main/apps/web/middleware.ts
+https://github.com/hoqua/okkino/blob/main/apps/web/middleware.ts
+https://github.com/inaridiy/learn-account-abstraction/blob/main/apps/learning-app/src/middleware.ts
+https://github.com/Bogdan21o312/magicbeauty/blob/main/apps/shop/middleware.ts
+https://github.com/nandotmbn/orlando-pokedex/blob/master/src/app/%5Blang%5D/middleware.ts
+https://github.com/manuelalferez/portfolio/blob/main/src/app/middleware.ts
 -->
