docs(books): last 87 changes

--- a/next.js/extend/i18n.md
+++ b/next.js/extend/i18n.md
@@ -5,13 +5,25 @@
 - Docs
   - [Internationalization](https://nextjs.org/docs/app/building-your-application/routing/internationalization)
 
+## Solutions
+
+- [FormatJS](https://formatjs.io)
+- [i18next](/i18next/README.md)
+- [Lingui](/lingui/README.md)
+
+<!--
+https://github.com/formatjs/formatjs
+https://github.com/i18next/react-i18next
+https://github.com/tolgee/tolgee-platform
+https://github.com/Avansai/next-multilingual
+https://github.com/aralroca/next-translate
+https://github.com/amannn/next-intl
+https://github.com/lukeed/rosetta
+-->
+
 <!--
 https://github.com/lingui/js-lingui
-https://github.com/amannn/next-intl
-https://github.com/i18next/next-i18next
-https://github.com/aralroca/next-translate
 https://github.com/QuiiBz/next-international
-https://github.com/Avansai/next-multilingual
 https://github.com/i18nexus/next-i18n-router
 -->
 
