docs(books): last 74 changes

--- a/aws/services/s3.md
+++ b/aws/services/s3.md
@@ -128,6 +128,19 @@ aws s3 sync s3://<source> s3://<target>
 
 ### Issues
 
+#### Access Denied
+
+```log
+<Error>
+<Code>AccessDenied</Code>
+<Message>Access Denied</Message>
+<RequestId>ATJAF9DK1RJ081Y1</RequestId>
+<HostId>AWGkgrKNHU4nXF0v38beiToRnjOnkMbxABpg+XDkMMeY2aiWXQKshMjrjy/ko6Zfgljj9YRcy90=</HostId>
+</Error>
+```
+
+TODO
+
 #### Wrong Credentials
 
 ```log
